# serializer version: 1
# name: test_button_presses[device]
  DeviceRegistryEntrySnapshot({
    'area_id': 'kitchen',
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'acaia',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Acaia',
    'model': 'Lunar',
    'model_id': None,
    'name': 'LUNAR-DDEEFF',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': 'Kitchen',
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_button_presses[entry_button_reset_timer]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lunar_ddeeff_reset_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset timer',
    'platform': 'acaia',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_timer',
    'unique_id': 'aa:bb:cc:dd:ee:ff_reset_timer',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_presses[entry_button_start_stop_timer]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lunar_ddeeff_start_stop_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start/stop timer',
    'platform': 'acaia',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_stop',
    'unique_id': 'aa:bb:cc:dd:ee:ff_start_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_presses[entry_button_tare]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lunar_ddeeff_tare',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tare',
    'platform': 'acaia',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tare',
    'unique_id': 'aa:bb:cc:dd:ee:ff_tare',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_presses[state_button_reset_timer]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LUNAR-DDEEFF Reset timer',
    }),
    'context': <ANY>,
    'entity_id': 'button.lunar_ddeeff_reset_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_presses[state_button_start_stop_timer]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LUNAR-DDEEFF Start/stop timer',
    }),
    'context': <ANY>,
    'entity_id': 'button.lunar_ddeeff_start_stop_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_presses[state_button_tare]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LUNAR-DDEEFF Tare',
    }),
    'context': <ANY>,
    'entity_id': 'button.lunar_ddeeff_tare',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
